fix: temp suppress error unable to handle month